# TextractorSender

./: .gitignore  CMakeLists.txt  README.md  TextractorSender.sln  build.bat
Extension/: CMakeLists.txt  Extension.cpp  Extension.h
TextractorSender/: Extension.cpp  Extension.h  Server.cpp  Server.h  TextractorSender.vcxproj  TextractorSender.vcxproj.filters  Utilities.cpp  Utilities.h
